// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserDetail /> should render 1`] = `
<div>
  <Detail__UserDetailHeader>
    <Detail__UserDetailTitle>
      <InitialIcon
        handle="bob"
        size="xl"
      />
      <span>
        bob
      </span>
      <Detail__AdminIcon
        color="blue"
        name="user-shield"
      />
      <Link
        to="/administration/users"
      >
        Back To List
      </Link>
    </Detail__UserDetailTitle>
  </Detail__UserDetailHeader>
  <Connect(Password) />
  <Detail__UserDetailGroups>
    <div>
      <Connect(UserGroups) />
      <Connect(PrimaryGroup) />
    </div>
    <Connect(UserPermissions) />
  </Detail__UserDetailGroups>
  <Connect(UserRole) />
  <RemoveBanner
    buttonText="Delete"
    message="Permanently remove this user"
    onClick={[Function]}
  />
</div>
`;

exports[`<UserDetail /> should render when [administrator=false] 1`] = `
<div>
  <Detail__UserDetailHeader>
    <Detail__UserDetailTitle>
      <InitialIcon
        handle="bob"
        size="xl"
      />
      <span>
        bob
      </span>
      <Link
        to="/administration/users"
      >
        Back To List
      </Link>
    </Detail__UserDetailTitle>
  </Detail__UserDetailHeader>
  <Connect(Password) />
  <Detail__UserDetailGroups>
    <div>
      <Connect(UserGroups) />
      <Connect(PrimaryGroup) />
    </div>
    <Connect(UserPermissions) />
  </Detail__UserDetailGroups>
  <Connect(UserRole) />
  <RemoveBanner
    buttonText="Delete"
    message="Permanently remove this user"
    onClick={[Function]}
  />
</div>
`;

exports[`<UserDetail /> should render when [canModifyUser=false] 1`] = `
<div>
  <Detail__UserDetailHeader>
    <Detail__UserDetailTitle>
      <InitialIcon
        handle="bob"
        size="xl"
      />
      <span>
        bob
      </span>
      <Detail__AdminIcon
        color="blue"
        name="user-shield"
      />
      <Link
        to="/administration/users"
      >
        Back To List
      </Link>
    </Detail__UserDetailTitle>
  </Detail__UserDetailHeader>
  <Connect(Password) />
  <Detail__UserDetailGroups>
    <div>
      <Connect(UserGroups) />
      <Connect(PrimaryGroup) />
    </div>
    <Connect(UserPermissions) />
  </Detail__UserDetailGroups>
  <Connect(UserRole) />
</div>
`;
